--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js"></script>
+    <script src="ethers.js"></script>
     
     <script src="app.js"></script>
 </body>
